css/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: "Fira Sans", sans-serif;
    line-height: 1.6;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex: 1;
    margin-bottom: 7rem;
}

footer {
    color: #7B7D7D;
    background-color: white;
    font-size: 0.8em;
    display: flex;
    align-items: center;
    justify-content: center;
    bottom: 0;
    width: 100%;
    position: fixed;
    height: 1.4rem;
    box-shadow: 0px -3px 5px rgba(0, 0, 0, 0.1);
}

/* Custom style for active events on navigation bar. */
.nav-link.active {
    font-weight: bold;
    color: #7D3C98 !important;
}

.nav-link i {
    font-size: 2rem;
}

a.custom-link {
    text-decoration: none;
    color: #8E44AD;
}

.about-text {
    text-align: justify;
    font-size: 1.2rem;
}

p.no-margin {
    margin: 0px;
}

.custom-main {
    max-width: 50rem;
    padding: 0 1.5rem;
}

.publisher-badge {
    background-color: #8E44AD;
    min-width: 5rem;
}

.news-badge {
    background-color: #27AE60;
    min-width: 10rem;
}

.publisher-width {
    min-width: 6rem;
}

.news-date-width {
    min-width: 12rem;
}

.pub-button {
    --bs-btn-padding-y: .1rem;
    --bs-btn-padding-x: .5rem;
    font-size: .9rem;
}

